Make work with JDK11 (and JDK8)